<?xml version="1.0"?>
<package format="2">
  <name>basler_ros_driver</name>
  <version>1.0.0</version>
  <description>The basler-ros-driver package</description>

  <maintainer email="haebum.j@stryx.co.kr">stryx</maintainer>
  <author>Hae-bum Jung</author>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>message_runtime</depend>
  <depend>message_generation</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
